# PuzzleNxN

./: CMakeLists.txt
include/: Board.h  BoardView.h  ControlPanel.h  Coordinates.h  GameState.h  Heuristic.h  MainWindow.h  MoveDirection.h  PuzzleModel.h  Solver.h  StatisticsView.h  Tile.h  TileView.h
src/: Board.cpp  BoardView.cpp  ControlPanel.cpp  GameState.cpp  Heuristic.cpp  MainWindow.cpp  PuzzleModel.cpp  Solver.cpp  StatisticsView.cpp  Tile.cpp  TileView.cpp  main.cpp
